# O1-O

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  README_PYPI.md  pyproject.toml  requirements.txt
examples/: README.md
fragments/: advanced_offensive_fragments.json  ai_safety_fragments.json  cir_essential_fragments.json  command_injection_fragments.json  credential_harvest_fragments.json  data_science_fragments.json  database_fragments.json  devops_fragments.json  ics_maritime_fragments.json  javascript_fragments.json  lateral_movement_fragments.json  library_fragments.json  malware_analysis_fragments.json  military_ew_fragments.json  offensive_fragments.json  operations_fragments.json  phase2_situational_awareness.json  phase7_objectives.json  phase8_anti_forensics.json  remaining_offensive_fragments.json  stdlib_network_fragments.json  steganography_fragments.json
fragments/mutation_pools/: dead_code.json  varnames.json
knowledge/: cli_automation.causal  fix_history.db  fragment_scores.db  honeypot_ttp_triplets.json  kill_chain_ontology.json  security_architecture.causal  target_queue.db
knowledge/.kb_versions/: manifest.json
knowledge/cve_cache/: search_buffer_overflow_macOS__0_0_0.json
o1o_o/: __init__.py  boot.py  bulk_harvest.py  compile_single.py  o1o.py  o1o_daemon.py  o1o_live.py  profile_turbo.py  quick_test.py
o1o_o/core/: __init__.py  anti_forensics.py  auto_bridge.py  auto_harvester.py  autonomous_loop.py  callback_injector.py  chain_composer.py  code_assembler.py  color_assembler.py  color_checker.py  color_types.py  crash_analyzer.py  crash_triage.py  credential_trigger_engine.py  cross_intel.py  decompiler.py  dependency_manager.py  deployment_guide.py  detection_test.py  domain_bootstrapper.py  engage_v2.py  (+57 more)
src/: boot.py  bulk_harvest.py  compile_knowledge.py  o1o.py  o1o_daemon.py  o1o_live.py  profile_turbo.py  quick_test.py  self_improve_runner.py
tests/: benchmark_runner.py  blind_runner.py  blind_tasks.json  blind_v2_runner.py  blind_v2_tasks.json  blind_v3_runner.py  blind_v3_tasks.json  blind_v4_tasks.json  cir_blue_tasks.json  cir_red_tasks.json  forge_validator.py  generate_report.py  regression.py  run_hardened.py  test_adversarial.py  test_basic.py  test_full.py  test_moonshot.py  test_natural_selection.py  test_v2_1.py  test_v3.py  test_v4.py
triplets/: bash_triplets.json  cli_automation_triplets.json  database_triplets.json  dataflow_triplets.json  error_handling_triplets.json  exploit_dev_triplets.json  forensics_ir_triplets.json  javascript_triplets.json  malware_analysis_triplets.json  networking_triplets.json  performance_triplets.json  protocol_attacks_triplets.json  security_crypto_triplets.json  social_engineering_triplets.json
(+289 files in other folders)
